Fixed block of heart icon on text overflow

--- a/blocks/gallery/__like/gallery__like.css
+++ b/blocks/gallery/__like/gallery__like.css
@@ -2,7 +2,10 @@
   width: 22px;
   height: 19px;
   background-image: url("../../../images/heart-button.svg");
-  align-self: center;
+  background-repeat: no-repeat;
+  top: 0;
+  right: 0;
+  /*align-self: center;*/
   cursor: pointer;
   opacity: 1;
   border: none;
@@ -21,3 +24,4 @@
 .gallery__like:disabled {
   opacity: 1;
 }
+
